PyMaker/datas/object2/RawHTML/i8801/Python_DOC_referPages.need-of-using-r-before-path-name-while-reading-a-csv-file-with-pandas.txt
<div class="post-text" itemprop="text">
<p>a newbie here.
Could someone tell me why do we use an 'r' in some cases before the path name in the following function?:</p>
<pre><code>df = pd.read_csv(r"Path_name")
</code></pre>
<p>Thanks in advance</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python, backslash is used to signify special characters.</p>
<p>e.g. "hello\nworld" -- the "\n" means a newline. Try printing it.</p>
<p>Path names on Windows tend to have backslashes in them. But we want them to mean actual backslashes, not special characters.</p>
<p>r stands for "raw" and will cause backslashes in the string to be interpreted as actual backslashes rather than special characters.</p>
<p>e.g. r"hello\nworld" literally means the characters "hello\nworld". Again, try printing it.</p>
<p>More info is in the Python docs, it's a good idea to search them for questions like these.</p>
<p><a href="https://docs.python.org/3/tutorial/introduction.html#strings" rel="noreferrer">https://docs.python.org/3/tutorial/introduction.html#strings</a></p>
</div>
<div class="post-text" itemprop="text">
<p>A raw string will handle back slashes in most cases, such as these two examples:</p>
<pre><code>In [11]:
r'c:\path'

Out[11]:
'c:\\path'
</code></pre>
<p>However, if there is a trailing slash then it will break:</p>
<pre><code>In [12]:
r'c:\path\'

  File "&lt;ipython-input-12-9995c7b1654a&gt;", line 1
    r'c:\path\'
               ^
SyntaxError: EOL while scanning string literal
</code></pre>
<p>Forward slashes doesn't have this problem:    </p>
<pre><code>In [13]:
r'c:/path/'

Out[13]:
'c:/path/'
</code></pre>
<p>The safe and portable method is to use forward slashes always and if building a string for a full path to use <a href="https://docs.python.org/2/library/os.path.html" rel="nofollow noreferrer"><code>os.path</code></a> to correctly handle building a path that will work when the code is executed on different operating systems:</p>
<pre><code>In [14]:
import os
path = 'c:/'
folder = 'path/'
os.path.join(path, folder)

Out[14]:
'c:/path/'
</code></pre>
</div>
<span class="comment-copy">These (raw strings) are necessary on Windows OSs when the path contains backslashes. Otherwise the backslash is treated as an escape character. So if you have, say, <code>\t</code> in a filename Windows will treat that as a tab character instead of a path separator. An alternative way to specify file paths is with forward slashes.</span>
<span class="comment-copy">Note that although a raw string will handle backslashes in the path, it won't correctly handle a trailing backslash e.g. <code>r'c:\path\'</code> the portable method is to use forward slashes always or <a href="https://docs.python.org/2/library/os.path.html" rel="nofollow noreferrer"><code>os.path</code></a></span>
